# epomenos

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  limine.conf
kernel/: Cargo.toml
kernel/src/: bootl.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: start.rs
kernel/src/drivers/: serial.rs
kernel/src/utils/: low_lvl.rs  mod.rs
target-scripts/x86_64/: build_iso.sh  linker.ld
target-specs/: x86_64.json
